--- a/app/views/v5/l2/users/view/custom.html
+++ b/app/views/v5/l2/users/view/custom.html
@@ -34,7 +34,7 @@
             <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">
-                        <a href="user-view" class="govuk-link">
+                        <a href="single" class="govuk-link">
                             {{ data['user-first-name'] }} {{ data['user-last-name'] }}
                         </a>
                     </th>
