Populating org views and user add views

--- a/app/views/v5/l2/orgs/view/capita.html
+++ b/app/views/v5/l2/orgs/view/capita.html
@@ -78,11 +78,11 @@
 
                     <ul class="govuk-list">
                         <li>
-                            <a href="user-add-user-prap-capita" class="govuk-link">Add a user</a>
+                            <a href="../../users/add/details-capita" class="govuk-link">Add a user</a>
                         </li>
 
                         <li>
-                            <a href="user-list-prap-capita" class="govuk-link">View all users</a>
+                            <a href="../../users/view/capita" class="govuk-link">View all users</a>
                         </li>
                     </ul>
                 </div>
