--- a/app/views/v5/l2/orgs/view/croydon.html
+++ b/app/views/v5/l2/orgs/view/croydon.html
@@ -80,11 +80,11 @@
 
                     <ul class="govuk-list">
                         <li>
-                            <a href="user-add-user-prap-croydon" class="govuk-link">Add a user</a>
+                            <a href="../../users/add/details-croydon" class="govuk-link">Add a user</a>
                         </li>
 
                         <li>
-                            <a href="user-list-prap-croydon" class="govuk-link">View all users</a>
+                            <a href="../../users/view/croydon" class="govuk-link">View all users</a>
                         </li>
                     </ul>
                 </div>
