--- a/app/views/v5/l2/orgs/view/dwp.html
+++ b/app/views/v5/l2/orgs/view/dwp.html
@@ -76,11 +76,11 @@
 
                     <ul class="govuk-list">
                         <li>
-                            <a href="user-add-user-prap-DWP" class="govuk-link">Add a user</a>
+                            <a href="../../users/add/details-dwp" class="govuk-link">Add a user</a>
                         </li>
 
                         <li>
-                            <a href="user-list-prap-DWP" class="govuk-link">View all users</a>
+                            <a href="../../users/view/dwp" class="govuk-link">View all users</a>
                         </li>
                     </ul>
                 </div>
