--- a/app/views/v5/l2/orgs/view/g4s.html
+++ b/app/views/v5/l2/orgs/view/g4s.html
@@ -79,11 +79,11 @@
 
                     <ul class="govuk-list">
                         <li>
-                            <a href="user-add-user-prap-G3S" class="govuk-link">Add a user</a>
+                            <a href="../../users/add/details-g4s" class="govuk-link">Add a user</a>
                         </li>
 
                         <li>
-                            <a href="user-list-prap-G3S" class="govuk-link">View all users</a>
+                            <a href="../../users/view/g4s" class="govuk-link">View all users</a>
                         </li>
                     </ul>
                 </div>
