--- a/app/views/v5/l2/orgs/view/serco.html
+++ b/app/views/v5/l2/orgs/view/serco.html
@@ -80,11 +80,11 @@
 
                     <ul class="govuk-list">
                         <li>
-                            <a href="user-add-user-prap-serco" class="govuk-link">Add a user</a>
+                            <a href="../../users/add/details-serco" class="govuk-link">Add a user</a>
                         </li>
 
                         <li>
-                            <a href="user-list-prap-serco" class="govuk-link">View all users</a>
+                            <a href="../../users/view/serco" class="govuk-link">View all users</a>
                         </li>
                     </ul>
                 </div>
