--- a/app/views/v5/l2/orgs/view/remploy.html
+++ b/app/views/v5/l2/orgs/view/remploy.html
@@ -78,11 +78,11 @@
 
                     <ul class="govuk-list">
                         <li>
-                            <a href="user-add-user-prap-remploy" class="govuk-link">Add a user</a>
+                            <a href="../../users/add/details-remploy" class="govuk-link">Add a user</a>
                         </li>
 
                         <li>
-                            <a href="user-list-prap-remploy" class="govuk-link">View all users</a>
+                            <a href="../../users/view/remploy" class="govuk-link">View all users</a>
                         </li>
                     </ul>
                 </div>
