Correct a link, updated a view

--- a/app/views/v5/l2/orgs/view/all.html
+++ b/app/views/v5/l2/orgs/view/all.html
@@ -49,19 +49,19 @@
 
                             <td class="govuk-table__cell">
                                 {% if not data['contact-1-first-name'] and not data['contact-2-first-name'] and not data['address-line-1'] %}
-                                    <a href="organisation-complete-details" class="govuk-link">
+                                    <a href="inactive-until-updated" class="govuk-link">
                                         Complete details
                                     </a>
                                 {% elseif not data['contact-1-first-name'] and not data['contact-2-first-name'] and data['address-line-1'] %}
-                                    <a href="organisation-complete-details" class="govuk-link">
+                                    <a href="inactive-until-updated" class="govuk-link">
                                         Add contacts
                                     </a>
                                 {% elseif data['contact-1-first-name'] and data['contact-2-first-name'] and not data['address-line-1'] %}
-                                    <a href="organisation-complete-details" class="govuk-link">
+                                    <a href="inactive-until-updated" class="govuk-link">
                                         Complete details
                                     </a>
                                 {% elseif data['contact-1-first-name'] and not data['contact-2-first-name'] and not data['address-line-1'] %}
-                                    <a href="organisation-complete-details" class="govuk-link">
+                                    <a href="inactive-until-updated" class="govuk-link">
                                         Complete details
                                     </a>
                                 {% elseif data['user-first-name'] and data['user-last-name'] %}
@@ -69,7 +69,7 @@
                                         View user
                                     </a>
                                 {% else %}
-                                    <a href="../../users/add/start-custom" class="govuk-link">
+                                    <a href="../../users/add/details-custom" class="govuk-link">
                                         Add user
                                     </a>
                                 {% endif %}
