--- a/app/views/v5/l2/users/add/details-custom.html
+++ b/app/views/v5/l2/users/add/details-custom.html
@@ -37,8 +37,6 @@
                     classes: "govuk-!-width-three-quarters"
                 }) }}
 
-
-
                 {{ govukInput({
                     label: {
                         text: "Email address"
@@ -48,6 +46,8 @@
                     type: "email",
                     classes: "govuk-!-width-three-quarters"
                 }) }}
+
+                <input type="hidden" value="{{ data['organisation-name'] }}" id="organisation-name" name="organisation-name">
 
                 {{ govukButton({
                     text: "Continue"
