Update user list to first name, last name

--- a/app/views/dev1/user-list-prap.html
+++ b/app/views/dev1/user-list-prap.html
@@ -32,7 +32,7 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header">
             <a href="user-view" class="govuk-link">
-                {{ data["user-first-na§§e"] + ' ' + data["user-last-name"] }}
+                {{ data["user-first-name"] + ' ' + data["user-last-name"] }}
             </a>
         </th>
         <td class="govuk-table__cell">{{ data['organisation-name'] }}</td>
