Update to dev ready changes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -115,6 +115,9 @@
                         <li>
                             Change 'full name' to 'first name' and 'last name'
                         </li>
+                        <li>
+                            Removed 'back' link from user list pages with pagination
+                        </li>
                     </ul>
 
                     <h3 class="govuk-heading-s">UR Goals</h3>
