--- a/app/views/index.html
+++ b/app/views/index.html
@@ -47,6 +47,12 @@
                 <li>
                     Start creating journeys for other level users
                 </li>
+                <li>
+                    Inactive and Pending activation changed to 'Access expired' and 'Invite sent'. Changes made as original terms not understood well by users.
+                </li>
+                <li>
+                    Removed 'back' link on user list pages with pagination
+                </li>
             </ul>
 
             <details class="govuk-details govuk-!-margin-top-9">
