--- a/app/views/v5/l2/users/view/all-2.html
+++ b/app/views/v5/l2/users/view/all-2.html
@@ -8,9 +8,6 @@
     {{ super() }}
 {% endblock %}
 
-{% block beforeContent %}
-    {% include 'includes/back-button.njk' %}
-{% endblock %}
 
 
 {% block content %}
@@ -31,13 +28,13 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
                 <td class="govuk-table__cell">Capita</td>
-                <td class="govuk-table__cell">Inactive</td>
+                <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
                 <td class="govuk-table__cell">Capita</td>
-                <td class="govuk-table__cell">Pending activation</td>
+                <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -49,13 +46,13 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Matt Hayes</a></th>
                 <td class="govuk-table__cell">G4S</td>
-                <td class="govuk-table__cell">Inactive</td>
+                <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mick Brown</a></th>
                 <td class="govuk-table__cell">G4S</td>
-                <td class="govuk-table__cell">Pending activation</td>
+                <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -79,7 +76,7 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Marina Gibson</a></th>
                 <td class="govuk-table__cell">G4S</td>
-                <td class="govuk-table__cell">Inactive</td>
+                <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -143,6 +140,6 @@
     </nav>
 
     <p class="govuk-!-margin-top-9">
-        <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+        <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
     </p>
 {% endblock %}
