--- a/app/views/v5/l2/users/view/all-3.html
+++ b/app/views/v5/l2/users/view/all-3.html
@@ -8,10 +8,6 @@
     {{ super() }}
 {% endblock %}
 
-{% block beforeContent %}
-    {% include 'includes/back-button.njk' %}
-{% endblock %}
-
 
 {% block content %}
     <h1 class="govuk-heading-l listing-page">Users</h1>
@@ -49,13 +45,13 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bruce Sandison</a></th>
                 <td class="govuk-table__cell">G4S</td>
-                <td class="govuk-table__cell">Inactive</td>
+                <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rex Hunt</a></th>
                 <td class="govuk-table__cell">G4S</td>
-                <td class="govuk-table__cell">Pending activation</td>
+                <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -79,13 +75,13 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John McKenzie</a></th>
                 <td class="govuk-table__cell">London Borough of Croydon Council</td>
-                <td class="govuk-table__cell">Inactive</td>
+                <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Peter Ridsdale</a></th>
                 <td class="govuk-table__cell">London Borough of Croydon Council</td>
-                <td class="govuk-table__cell">Inactive</td>
+                <td class="govuk-table__cell">Access expired</td>
             </tr>
         </tbody>
     </table>
@@ -143,6 +139,6 @@
     </nav>
 
     <p class="govuk-!-margin-top-9">
-        <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+        <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
     </p>
 {% endblock %}
