--- a/app/views/v5/l2/users/view/all-5.html
+++ b/app/views/v5/l2/users/view/all-5.html
@@ -8,10 +8,6 @@
     {{ super() }}
 {% endblock %}
 
-{% block beforeContent %}
-    {% include 'includes/back-button.njk' %}
-{% endblock %}
-
 
 {% block content %}
     <h1 class="govuk-heading-l listing-page">Users</h1>
@@ -143,6 +139,6 @@
     </nav>
 
     <p class="govuk-!-margin-top-9">
-        <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+        <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
     </p>
 {% endblock %}
