--- a/app/views/v5/l2/users/view/all.html
+++ b/app/views/v5/l2/users/view/all.html
@@ -8,9 +8,6 @@
     {{ super() }}
 {% endblock %}
 
-{% block beforeContent %}
-    {% include 'includes/back-button.njk' %}
-{% endblock %}
 
 {% block content %}
     {% set sortFilterHtml %}
@@ -205,7 +202,7 @@
                         </td>
 
                         <td class="govuk-table__cell">
-                            Pending activation
+                            Invite sent
                         </td>
                     </tr>
                 {% endif %}
@@ -213,19 +210,19 @@
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
                     <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Inactive</td>
+                    <td class="govuk-table__cell">Access expired</td>
                 </tr>
 
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
                     <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Inactive</td>
+                    <td class="govuk-table__cell">Access expired</td>
                 </tr>
 
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
                     <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Pending activation</td>
+                    <td class="govuk-table__cell">Invite sent</td>
                 </tr>
 
                 <tr class="govuk-table__row">
@@ -325,7 +322,7 @@
         </nav>
 
         <p class="govuk-!-margin-top-9">
-            <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+            <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
         </p>
     </div>
 {% endblock %}
