--- a/app/views/v5/l2/users/view/capita-2.html
+++ b/app/views/v5/l2/users/view/capita-2.html
@@ -8,9 +8,6 @@
     {{ super() }}
 {% endblock %}
 
-{% block beforeContent %}
-    {% include 'includes/back-button.njk' %}
-{% endblock %}
 
 {% block content %}
     <h1 class="govuk-heading-l listing-page">
@@ -33,13 +30,13 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
                 <td class="govuk-table__cell">jon.newsome@capita.co.uk</td>
-                <td class="govuk-table__cell">Inactive</td>
+                <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
                 <td class="govuk-table__cell">chris.whyte@capita.co.uk</td>
-                <td class="govuk-table__cell">Pending activation</td>
+                <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
