--- a/app/views/v5/l2/users/view/serco.html
+++ b/app/views/v5/l2/users/view/serco.html
@@ -8,10 +8,6 @@
     {{ super() }}
 {% endblock %}
 
-{% block beforeContent %}
-    {% include 'includes/back-button.njk' %}
-{% endblock %}
-
 
 {% block content %}
     <h1 class="govuk-heading-l listing-page">
@@ -39,26 +35,26 @@
             </a>
         </th>
         <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
-        <td class="govuk-table__cell">Active</td>
+        <td class="govuk-table__cell">Invite sent</td>
       </tr>
       {% endif %}
 
       <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">William Bremner</a></th>
           <td class="govuk-table__cell">wbremner@serco.co.uk</td>
-          <td class="govuk-table__cell">Inactive</td>
+          <td class="govuk-table__cell">Access expired</td>
         </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Edward Gray</a></th>
         <td class="govuk-table__cell">egray@serco.co.uk</td>
-        <td class="govuk-table__cell">Inactive</td>
+        <td class="govuk-table__cell">Access expired</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jonathon Giles</a></th>
         <td class="govuk-table__cell">jgiles@serco.co.uk</td>
-        <td class="govuk-table__cell">Pending activation</td>
+        <td class="govuk-table__cell">Invite sent</td>
       </tr>
 
       <tr class="govuk-table__row">
@@ -96,6 +92,6 @@
 
 
   <p class="govuk-!-margin-top-9">
-    <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+    <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
   </p>
 {% endblock %}
