--- a/app/views/v5/l2/orgs/view/capita.html
+++ b/app/views/v5/l2/orgs/view/capita.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Organisation details - {{siteName}}
+    Organisation details - Capita
 {% endblock %}
 
 {% block header %}
@@ -29,8 +29,6 @@
                         Sheffield<br>
                         S4 7TL
                     </p>
-
-                    <!--<p>Company number: 2081330</p>-->
 
                     <p>
                         <a href="#" class="govuk-link">Edit organisation details</a>
@@ -124,7 +122,7 @@
                 </div>
             </div>
 
-            <form id="form" method="post" action="org-actions">
+            <form id="form" method="post" action="actions-branch">
                 {{ govukRadios({
                     classes: "govuk-radios",
                     idPrefix: "org-task",
@@ -138,12 +136,12 @@
                     },
                     items: [
                         {
-                            value: "remove-by-contract",
-                            text: "Remove users by team"
+                            value: "delete-users-by-team",
+                            text: "Delete users by team"
                         },
                         {
-                            value: "remove-by-service",
-                            text: "Remove users by service"
+                            value: "delete-users-by-service",
+                            text: "Delete users by service"
                         },
                         {
                             value: "delete",
@@ -158,7 +156,7 @@
             </form>
 
             <p class="govuk-!-margin-top-9">
-                <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+                <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
             </p>
         </div>
     </div>
