--- a/app/views/v5/l2/orgs/view/custom.html
+++ b/app/views/v5/l2/orgs/view/custom.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Organisation details - {{siteName}}
+    Organisation details - {{ data['organisation-name'] }}
 {% endblock %}
 
 {% block header %}
@@ -24,34 +24,33 @@
                     <h2 class="govuk-heading-m">Organisation address</h2>
 
                     {% if data['address-line-1'] %}
-                    <p>
-                        {% if data['address-line-1'] %}
-                            {{ data['address-line-1'] }}<br>
-                        {% endif %}
+                        <p>
+                            {% if data['address-line-1'] %}
+                                {{ data['address-line-1'] }}<br>
+                            {% endif %}
 
-                        {% if data['address-line-2'] %}
-                            {{ data['address-line-2'] }}<br>
-                        {% endif %}
+                            {% if data['address-line-2'] %}
+                                {{ data['address-line-2'] }}<br>
+                            {% endif %}
 
-                        {% if data['address-town'] %}
-                            {{ data['address-town'] }}<br>
-                        {% endif %}
+                            {% if data['address-town'] %}
+                                {{ data['address-town'] }}<br>
+                            {% endif %}
 
-                        {% if data['address-postcode'] %}
-                            {{ data['address-postcode'] }}
-                        {% endif %}
-                    </p>
+                            {% if data['address-postcode'] %}
+                                {{ data['address-postcode'] }}
+                            {% endif %}
+                        </p>
                     {% endif %}
 
                     {% if data['address-line-1'] %}
-                    <p>
-                        <a href="organisation-edit-address" class="govuk-link">Edit organisation address</a>
-                    </p>
-
+                        <p>
+                            <a href="organisation-edit-address" class="govuk-link">Edit organisation address</a>
+                        </p>
                     {% else %}
-                    <p>
-                        <a href="organisation-add-address-only" class="govuk-link">Add organisation address</a>
-                    </p>
+                        <p>
+                            <a href="organisation-add-address-only" class="govuk-link">Add organisation address</a>
+                        </p>
                     {% endif %}
                 </div>
 
@@ -62,13 +61,13 @@
                         <span class="govuk-visually-hidden">There are currently</span>
 
                         {% if data['contact-3-first-name'] and data['contact-2-first-name'] and data['contact-1-first-name'] %}
-                        3
+                            3
                         {% elseif data['contact-2-first-name'] and data['contact-1-first-name'] %}
-                        2
+                            2
                         {% elseif data['contact-1-first-name'] %}
-                        1
+                            1
                         {% else %}
-                        0
+                            0
                         {% endif %}
 
                         <span class="govuk-visually-hidden">contacts in the system</span>
@@ -157,12 +156,12 @@
                     },
                     items: [
                         {
-                            value: "remove-by-team",
-                            text: "Remove users by team"
+                            value: "delete-users-by-team",
+                            text: "Delete users by team"
                         },
                         {
-                            value: "remove-by-service",
-                            text: "Remove users by service"
+                            value: "delete-users-by-service",
+                            text: "Delete users by service"
                         },
                         {
                             value: "delete",
@@ -177,7 +176,7 @@
             </form>
 
             <p class="govuk-!-margin-top-9">
-                <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+                <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
             </p>
         </div>
     </div>
