--- a/app/views/v5/l2/orgs/view/dwp.html
+++ b/app/views/v5/l2/orgs/view/dwp.html
@@ -136,12 +136,12 @@
                     },
                     items: [
                         {
-                            value: "remove-by-team",
-                            text: "Remove users by team"
+                            value: "delete-users-by-team",
+                            text: "Delete users by team"
                         },
                         {
-                            value: "remove-by-service",
-                            text: "Remove users by service"
+                            value: "delete-users-by-service",
+                            text: "Delete users by service"
                         },
                         {
                             value: "delete",
@@ -156,7 +156,7 @@
             </form>
 
             <p class="govuk-!-margin-top-9">
-                <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+                <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
             </p>
         </div>
     </div>
