--- a/app/views/v5/l2/orgs/view/remploy.html
+++ b/app/views/v5/l2/orgs/view/remploy.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Organisation details - {{siteName}}
+    Organisation details - Remploy
 {% endblock %}
 
 {% block header %}
@@ -29,8 +29,6 @@
                         Leicester<br>
                         LE19 1WZ
                     </p>
-
-                    <!--<p>Company number: 04992207</p>-->
 
                     <p>
                         <a href="#" class="govuk-link">Edit organisation details</a>
@@ -138,12 +136,12 @@
                     },
                     items: [
                         {
-                            value: "remove-by-team",
-                            text: "Remove users by team"
+                            value: "delete-users-by-team",
+                            text: "Delete users by team"
                         },
                         {
-                            value: "remove-by-service",
-                            text: "Remove users by service"
+                            value: "delete-users-by-service",
+                            text: "Delete users by service"
                         },
                         {
                             value: "delete",
@@ -158,7 +156,7 @@
             </form>
 
             <p class="govuk-!-margin-top-9">
-                <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+                <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
             </p>
         </div>
     </div>
