--- a/app/views/v5/l2/orgs/view/serco.html
+++ b/app/views/v5/l2/orgs/view/serco.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Organisation details - {{siteName}}
+    Organisation details - Serco
 {% endblock %}
 
 {% block header %}
@@ -29,10 +29,7 @@
                         Bartley Way<br>
                         Hook<br>
                         RG27 9UY
-
                     </p>
-
-                    <!--<p>Company number: 04992202</p>-->
 
                     <p>
                         <a href="#" class="govuk-link">Edit organisation details</a>
@@ -126,7 +123,7 @@
                 </div>
             </div>
 
-            <form id="form" method="post" action="org-actions">
+            <form id="form" method="post" action="actions-branch">
                 {{ govukRadios({
                     classes: "govuk-radios",
                     idPrefix: "org-task",
@@ -140,12 +137,12 @@
                     },
                     items: [
                         {
-                            value: "remove-by-team",
-                            text: "Remove users by team"
+                            value: "delete-users-by-team",
+                            text: "Delete users by team"
                         },
                         {
-                            value: "remove-by-service",
-                            text: "Remove users by service"
+                            value: "delete-users-by-service",
+                            text: "Delete users by service"
                         },
                         {
                             value: "delete",
@@ -160,7 +157,7 @@
             </form>
 
             <p class="govuk-!-margin-top-9">
-                <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+                <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
             </p>
         </div>
     </div>
