Start fxinf organisation-name issue in User Add journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -53,6 +53,9 @@
                 <li>
                     Removed 'back' link on user list pages with pagination
                 </li>
+                <li>
+                    Make sure there's a view for the organisation choice of 'delete users by team' and 'delete users by service' - just needs content.
+                </li>
             </ul>
 
             <details class="govuk-details govuk-!-margin-top-9">
