--- a/app/views/v5/l2/users/add/details.html
+++ b/app/views/v5/l2/users/add/details.html
@@ -55,6 +55,8 @@
                 {{ govukButton({
                     text: "Continue"
                 }) }}
+
+                <input type="hidden" id="organisation-name" name="organisation-name" value="{{ data['organisation-name-existing'] }}">
             </form>
         </div>
     </div>
