Updates to changes on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -48,7 +48,7 @@
                     Start creating journeys for other level users
                 </li>
                 <li>
-                    Inactive and Pending activation changed to 'Access expired' and 'Invite sent'. Changes made as original terms not understood well by users.
+                    'Inactive' and 'Pending activation' changed to 'Access expired' and 'Invite sent'. Changes made as original terms not understood well by users.
                 </li>
                 <li>
                     Removed 'back' link on user list pages with pagination
