--- a/app/views/v5/l2/orgs/add/contacts-check.html
+++ b/app/views/v5/l2/orgs/add/contacts-check.html
@@ -39,7 +39,7 @@
                         },
                         {
                             value: "no",
-                            text: "No, I will add them later"
+                            text: "No, add them later"
                         }
                     ]
                 }) }}
