Added resend code page to register journey

--- a/app/views/v5/l3/register/code-in-message.html
+++ b/app/views/v5/l3/register/code-in-message.html
@@ -44,6 +44,6 @@
                 href: "backup-app-branch.html"
             }) }}
 
-            <p><a href="">I didn't receive a text message</a></p>
+            <p><a href="resend-code">I didn't receive a text message</a></p>
   </div>
 {% endblock %}
