Edit to index changes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,6 +56,7 @@
                 <li>
                     Make sure there's a view for the organisation choice of 'delete users by team' and 'delete users by service' - just needs content.
                 </li>
+                <li>Added journey for new user registration with 2FA and Authenticator app backup option</li>
             </ul>
 
             <details class="govuk-details govuk-!-margin-top-9">
