--- a/app/views/v5/l3/register/code-in-message.html
+++ b/app/views/v5/l3/register/code-in-message.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Sign up - {{serviceName}}
+    Code in message - {{serviceName}}
 {% endblock %}
 
 {% block header %}
