--- a/app/views/v5/l3/register/qrcode.html
+++ b/app/views/v5/l3/register/qrcode.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Sign up - {{serviceName}}
+    Setup device - {{serviceName}}
 {% endblock %}
 
 {% block header %}
@@ -50,7 +50,7 @@
                   
                   {{ govukButton({
                     text: "Continue",
-                    href: "qrcode.html"
+                    href: "auth-app"
                 }) }}
 
                 <p><a href="backup-app-branch">I don't want to set this up</a></p>
