--- a/app/views/v5/l3/register/create-new-password.html
+++ b/app/views/v5/l3/register/create-new-password.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Sign up - {{serviceName}}
+    Create new password - {{serviceName}}
 {% endblock %}
 
 {% block header %}
