--- a/app/views/v5/l3/register/enter-mobile.html
+++ b/app/views/v5/l3/register/enter-mobile.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Sign up - {{serviceName}}
+    Mobile phone number - {{serviceName}}
 {% endblock %}
 
 {% block header %}
