--- a/app/views/v5/l3/register/registration-complete.html
+++ b/app/views/v5/l3/register/registration-complete.html
@@ -1,11 +1,23 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Organisation added - {{serviceName}}
+  Registration complete - {{serviceName}}
 {% endblock %}
 
 {% block header %}
-    {{ super() }}
+    <header class="govuk-header" role="banner" data-module="govuk-header">
+        <div class="govuk-header__container govuk-width-container">
+            <div class="govuk-header__logo">
+                <a href="/" class="govuk-header__link govuk-header__link--homepage">
+                    <span class="govuk-header__logotype">
+                        <span class="govuk-header__logotype-text">
+                            {{serviceName}}
+                        </span>
+                    </span>
+                </a>
+            </div>
+        </div>
+    </header>
 {% endblock %}
 
 {% block content %}
