Update to changes on index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -48,15 +48,15 @@
                     Start creating journeys for other level users
                 </li>
                 <li>
-                    'Inactive' and 'Pending activation' changed to 'Access expired' and 'Invite sent'. Changes made as original terms not understood well by users.
+                    'Inactive' and 'Pending activation' changed to 'Access expired' and 'Invite sent'. Changes made as original terms not understood well by users
                 </li>
                 <li>
                     Removed 'back' link on user list pages with pagination
                 </li>
                 <li>
-                    Make sure there's a view for the organisation choice of 'delete users by team' and 'delete users by service' - just needs content.
+                    Make sure there's a view for the organisation choice of 'delete users by team' and 'delete users by service' - just needs content
                 </li>
-                <li>Added journey for new user registration with 2FA and Authenticator app backup option</li>
+                <li>Added journey for <a href="v5/l3/register/start.html">new user registration</a> with 2FA and Authenticator app backup option</li>
             </ul>
 
             <details class="govuk-details govuk-!-margin-top-9">
