Updated changes on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,7 +56,9 @@
                 <li>
                     Make sure there's a view for the organisation choice of 'delete users by team' and 'delete users by service' - just needs content
                 </li>
-                <li>Added journey for <a href="v5/l3/register/start.html">new user registration</a> with 2FA and Authenticator app backup option</li>
+                <li>Added journey for <a href="v5/l3/register/start">new user registration</a> with 2FA and Authenticator app backup option</li>
+
+                <li>Added journey for <a href="/v5/l2/reset-password/start">reset password</a></li>
             </ul>
 
             <details class="govuk-details govuk-!-margin-top-9">
