Fix form action for details-custom view

--- a/app/views/v5/l2/users/add/details-custom.html
+++ b/app/views/v5/l2/users/add/details-custom.html
@@ -15,10 +15,12 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">{{ data['organisation-name'] }}</span>
-                    Add a user</h1>
-            <form action="user-confirmation-prap-new" method="post" class="form">
+            <h1 class="govuk-heading-l listing-page">
+                <span class="govuk-caption-l">{{ data['organisation-name'] }}</span>
+                Add a user
+            </h1>
 
+            <form action="confirmation" method="post" class="form">
                 {{ govukInput({
                     label: {
                         text: "First name"
