Same fix for other org details pages

--- a/app/views/v5/l2/users/add/details-capita.html
+++ b/app/views/v5/l2/users/add/details-capita.html
@@ -16,7 +16,7 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form action="user-confirmation-prap?data=organisation-name:capita" method="post" class="form">
+            <form action="confirmation" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
                         html: '<h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">Capita</span>
