--- a/app/views/v5/l2/users/add/details-dwp.html
+++ b/app/views/v5/l2/users/add/details-dwp.html
@@ -15,7 +15,7 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form action="user-confirmation-prap" method="post" class="form">
+            <form action="confirmation" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
                         html: '<span class="govuk-caption-l">DWP</span>Add a user',
