--- a/app/views/v5/l2/users/add/details-g4s.html
+++ b/app/views/v5/l2/users/add/details-g4s.html
@@ -15,7 +15,7 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form action="user-confirmation-prap" method="post" class="form">
+            <form action="confirmation" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
                         html: '<h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">G4S</span>
