--- a/app/views/v5/l2/users/view/custom.html
+++ b/app/views/v5/l2/users/view/custom.html
@@ -39,7 +39,7 @@
                         </a>
                     </th>
                     <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
-                    <td class="govuk-table__cell">Pending activation</td>
+                    <td class="govuk-table__cell">Invite sent</td>
                 </tr>
             </tbody>
     </table>
