Status content change to user view

--- a/app/views/v5/l2/users/view/single.html
+++ b/app/views/v5/l2/users/view/single.html
@@ -21,7 +21,7 @@
 
             {% set userStatus %}
                 {% if data['user-first-name'] and data['user-last-name'] %}
-                    Pending activation
+                    Invite sent
                 {% else %}
                     Active
                 {% endif %}
